simplified account creation: a user is always associated to a home
